@@ -37,7 +37,7 @@ s32 CReadFile::read(void* buffer, u32 sizeToRead)
 	if (!isOpen())
 		return 0;
 
-	return fread(buffer, 1, sizeToRead, File);
+	return (s32)fread(buffer, 1, sizeToRead, File);
 }
 
 
